fix: fix style section link

--- a/shuman.html
+++ b/shuman.html
@@ -294,7 +294,7 @@
     </div>  
    </div> 
 </section>
-<section class="styles">
+<section class="styles" id="style">
   <h1 class="header-styles">Жанры творчества.</h1>
   <p class="styles-desc">
     С 1810 г. на горизонте музыкального романтизма появилось новое яркое созвездие: Шуман, Шопен, в 1811 – Лист и в 1813 – Вагнер. Каждый из этих композиторов работал в близких ему жанрах. Трое предпочли в качестве основной область фортепианной музыки: это Шопен, Шуман (написавший около 50 сборников фортепианных пьес) и Лист, создавший для фортепиано более тысячи пьес. Вагнер стал реформатором оперы. Шопен и Лист опер не писали. Что же касается Шумана, то в его наследии есть и опера («Геновева»), и музыка к «Манфреду», и сцены из «Фауста», и оратория («Рай и Пери»), а среди вокальных сочинений, кроме циклов с развивающимся сюжетом – песни-картины, маленькие вокальные трагедии и баллады (всего около 200 сочинений). Объясняется это и склонностью Шумана к музыкально-театральным жанрам, и его необычайной одаренности как драматурга, писателя, поэта и публициста – автора 200 статей (в одной из которых он открыл Шопена = «Op.2» - «Шляпы долой, господа, перед нами гений!», а в последствии и Брамса). Ко всему, Шуман был еще и сценарист, написавший множество пьес. Среди прочих жанров – струнные квартеты, 4 симфонии («Рейнская», «Весенняя» и др.), фортепианный концерт и др.
